--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: .
       dockerfile: Dockerfile  # Use your Django Dockerfile
     ports:
       - "8000:8000"  # Map port 8000 on the host to port 8000 in the container
