--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
 
   backend:
     build:
-      context: ./rotary-backend
+      context: ./rotary-backend/backend
       dockerfile: ./Dockerfile
     ports:
       - "8000:8000"
