--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,9 +1,9 @@
-version: '3'
+version: '3.4'
 
 services:
   backend:
     build:
-      # context: ./backend
+      context: ./backend
       dockerfile: ./Dockerfile
     ports:
       - "8000:8000"
